--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	<!-- Schema.org meta for Google+ -->
 	<meta itemprop="name" content="Nina Carducci photographe" />
 	<meta itemprop="description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
-	<meta itemprop="image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp" />
+	<meta itemprop="image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
 	<!-- Twitter summary card with large image must be at least 280x150px -->
-	<meta name="twitter:card" content="Nina Carducci photographe" />
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="Nina Carducci" />
 	<meta name="twitter:creator" content="Nina Carducci" />
 	<meta name="twitter:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta name="twitter:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
-	<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp" />
+	<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
 	<!-- Open Graph meta (Facebook, Linkedin) -->
 	<meta property="og:title" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta property="og:type" content="portfolio" />
 	<meta property="og:description" content="Portfolio de Nina Carducci photographe à Bordeaux" />
 	<meta property="author" content="Nina Carducci" />
-	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp" />
+	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/bootstrap/bootstrap.min.css">
 	<meta charset="UTF-8">
 	<style>@import url('https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap');</style>
