--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		  "@context": "https://schema.org",
 		  "@type": "LocalBusiness",
 		  "name": "Nina Carducci",
-		  "image": "./assets/images/nina-500.webp",
+		  "image": "https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/ninasocial.webp",
 		  "description": "Services de photographie à Bordeaux",
 		  "address": {
 			"@type": "PostalAddress",
